<resources>
    <string name="app_name">Popular Movies</string>
    <string name="detail_activity">Movie Details</string>
    <string name="settings_activity">Settings</string>

    <!-- Menu Items -->
    <string name="action_settings">Settings</string>

    <!-- Sort Array Declaration labels-->
    <string name="pref_sort_label">Sort Order</string>
    <string name="pref_sort_most_popular">Most Popular</string>
    <string name="pref_sort_high_rated">Top Rated</string>
   <string name="pref_sort_user_favourite">Favourite</string>


    <!-- Sort Array Declaration values-->
    <string name="pref_sort_key">sort</string>
    <string name="pref_sort_most_popular_values">popular</string>
    <string name="pref_sort_high_rated_values">top_rated</string>
    <string name="pref_sort_user_favourite_values">favourite</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_need_internet">This application needs Internet connection. Check and Try Again!</string>

    <!-- UI text -->
    <!-- Headline for release date -->
    <string name="heading_release_date">release date</string>
    <!-- Headline for user vote average -->
    <string name="heading_vote_average">votes</string>
    <!-- Runtime text -->
    <string name="no_release_date_found">No release date found</string>
    <string name="no_summary_found">No summary was found</string>

    <string name="movie_data">MOVIE_DATA</string>
    <string name="favourite">favorite</string>
    <string name="trailers_header">TRAILERS</string>
    <string name="reviews_header">REVIEWS</string>
    <string name="overview_header">SYNOPSIS</string>
    <string name="overviewDescription">This is the Movie Description</string>
</resources>
